# facial_expression_recognition_mobilefacenet_example

./: README.md  pyproject.toml  requirements.txt
emotion_recog/: __main__.py  emotion_recognizer.py  yunet.py
